--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ gradle-app.setting
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Ignore Gradle build output directory
+build
+
+# Ignore VS code
+.vscode
+
+# Ignore bin folder
+bin
