--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
+
+    // Include Apache Spark
+    compile "org.apache.spark:spark-core_2.12:3.1.1"
+    compile "org.apache.spark:spark-sql_2.12:3.1.1"
 }
 
 application {
