--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
 arguments=
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(6.8))
+connection.gradle.distribution=GRADLE_DISTRIBUTION(LOCAL_INSTALLATION(/opt/gradle/gradle-6.7.1))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=C\:/Program Files/AdoptOpenJDK/jdk-11.0.11.9-hotspot
+java.home=/usr/lib/jvm/java-11-openjdk-amd64
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
