--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,11 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
 
-    // Include Apache Spark
-    compile "org.apache.spark:spark-core_2.12:3.1.1"
-    compile "org.apache.spark:spark-sql_2.12:3.1.1"
+    // // Include Apache Spark
+    // compile "org.apache.spark:spark-core_2.12:3.1.1"
+    // compile "org.apache.spark:spark-sql_2.12:3.1.1"
+    // https://mvnrepository.com/artifact/org.apache.spark/spark-sql
+    implementation group: 'org.apache.spark', name: 'spark-sql_2.12', version: '3.1.1'
 
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
 
